--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,10 +23,11 @@ jobs:
           server-password: ${{ secrets.GITHUB_TOKEN }}
           overwrite-settings: true
 
+      - name: Install Maven
+        run: sudo apt-get install -y maven
+
       - name: Install dependencies
-        run: |
-          ./mvnw install
+        run: mvn install
 
       - name: Run Selenium tests
-        run: |
-          ./mvnw test
+        run: mvn test
